# aqdx-v3-validator

./: .gitignore  app.py  pyproject.toml  readme.md  requirements.txt  streamlit_app.py
notebooks/: test_data_generation.ipynb
src/: validate_aqdx.py
test_files/: error_datetime_offset.csv  error_datetime_repairable.csv  error_datetime_z.csv  error_leading_zeros.csv  error_missing_column.csv  error_missing_parameter_value_without_validity_code.csv  error_null_island.csv  error_precision.csv  valid_column_swap.csv  valid_example.csv  valid_opened_in_excel.xlsx  warn_latlon_swap.csv
tests/: test_validation.py
